--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 		<div id="name">
 			<h1>Joe Bloggs</h1>
-			<h2>Job Title</h2>
+			<h2 class = "Job">Job Title</h2>
 		</div>
 		
 		<div id="contactDetails">
@@ -33,14 +33,15 @@
 				<li>m: 01234567890</li>
 			</ul>
 		</div>
+		
 		<div class="clear"></div>
 	</div>
-	
+	<hr class = "divisor">
 	<div id="mainArea">
 		<section>
 			<article>
 				<div class="sectionTitle">
-					<h1>Personal Profile</h1>
+					<h1 class = "tittle-italic" >Personal Profile</h1>
 				</div>
 				
 				<div class="sectionContent">
@@ -49,11 +50,12 @@
 			</article>
 			<div class="clear"></div>
 		</section>
+		<hr class = "divisoria-topicos">
 		
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Work Experience</h1>
+				<h1 class = "tittle-italic" >Work Experience</h1>
 			</div>
 			
 			<div class="sectionContent">
@@ -77,11 +79,11 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
+		<hr class = "divisoria-topicos">
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Key Skills</h1>
+				<h1 class = "tittle-italic" >Key Skills</h1>
 			</div>
 			
 			<div class="sectionContent">
@@ -98,11 +100,11 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
+		<hr class = "divisoria-topicos">
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Education</h1>
+				<h1 class = "tittle-italic">Education</h1>
 			</div>
 			
 			<div class="sectionContent">
